--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" >
+    <!-- <link rel="stylesheet" type="text/css" href="/styles.css"> -->
     <title>Skribe</title>
 </head>
 <body>
-    <div class="container">
-        <div id="root">
-            <!-- form -->
-        </div>
+    <div id="root">
+        <!-- form -->
     </div>
     <script src="/bundle.js"></script>
 </body>
