--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="utf-8">
     <!-- <link rel="stylesheet" type="text/css" href="/styles.css"> -->
-    <title>Skribe</title>
+    <link rel="shortcut icon" href="https://www.google.co.in/url?sa=i&rct=j&q=&esrc=s&source=images&cd=&cad=rja&uact=8&ved=2ahUKEwjq5sSohOHdAhWNbX0KHUF8B1wQjRx6BAgBEAU&url=https%3A%2F%2Fubisafe.org%2Fexplore%2Ftransparent-twitter-favicon%2F&psig=AOvVaw2YvAHsKjd8IhExHd-PSh08&ust=1538338682338081" />
+    <title>Twitter App!!!</title>
 </head>
 <body>
     <div id="root">
